--- a/index.html
+++ b/index.html
@@ -11,11 +11,16 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/style/portfolio.css">
+    <script src="https://kit.fontawesome.com/7c68763aac.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div class="d-flex bg-primary">
-        <h1>welcome</h1>
-    <p>odubiro omodara</p>
+    <div class="hero">
+      <p>👋 Hello, I am</p>
+      <h1>Odubiro Omodara</h1>
+      <h2 class="mb-3">Frontend Developer, based in Nigeria.</h2>
+      <div>
+        <a href="#" class="btn btn-branding">Contact me</a>
+      </div>
     </div>
     
 </body>
