--- a/index.html
+++ b/index.html
@@ -22,6 +22,47 @@
         <a href="#" class="btn btn-branding">Contact me</a>
       </div>
     </div>
+     <p class="text-center m-5">Featured Project which my best projects be choice to show</p>
+    <div class="container">
+      <div class="row mb-5">
+        <div class="col d-none d-lg-block">
+          <img src="images/weatherapp.png" class="img-fluid" alt=""/>
+        </div>
+        <div class="col">
+          <div class="project-description">
+          <h2 class="mb-5">Weather App</h2>
+          <p class="mb-5 text-muted">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by</p>
+          <a href="#" class="btn btn-branding-outline">Learn more</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="row mb-5">
+        <div class="col">
+          <div class="project-description">
+          <h2 class="mb-5">Cabu App</h2>
+          <p class="mb-5 text-muted">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by</p>
+          <a href="#" class="btn btn-branding-outline">Learn more</a>
+          </div>
+        </div>
+         <div class="col d-none d-lg-block">
+          <img src="images/carpoll.png" class="img-fluid" alt=""/>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col d-none d-lg-block">
+          <img src="images/msf.png" class="img-fluid" alt=""/>
+        </div>
+        <div class="col">
+          <div class="project-description">
+          <h2 class="mb-5">Msf Project</h2>
+          <p class="mb-5 text-muted">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by</p>
+          <a href="#" class="btn btn-branding-outline">Learn more</a>
+          </div>
+        </div>
+      </div>
+    </div>
     
-</body>
+  </body>
 </html>
