worked on the work page and styled it

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
       <h2 class="mb-3">Frontend Developer, based in Nigeria.</h2>
       <div>
         <a href="#" class="btn btn-branding">Contact me</a>
-        <a href="about.html" class="about-me" title="about-me">About me</a>
+        <a href="about.html"  title="about-me" class="px-2">About me</a>
+        <a href="work.html"  title="about-me">works</a>
+
       </div>
     </div>
      <p class="text-center m-5">Featured Project which my best projects be choice to show</p>
