--- a/about.html
+++ b/about.html
@@ -14,10 +14,10 @@
     <script src="https://kit.fontawesome.com/7c68763aac.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div class="about-section container">
+    <div class="content-container container">
         <div class="row">
             <div class="col-lg-6">
-                <div class="about-section-content">
+                <div class="content">
                     <h1 class="mb-4">Hi I am Omodara Odubiro</h1>
                     <h2 class="mb-4">Frontend Developer, based in Nigeria.</h2>
                     <p class="mb-5">For anyone who wants to start learning code, this workshop is very interesting. You will be challenged with different exercises, and everything is well explained, homework and deadlines are good for keep focus</p>
