added a contact page

--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
       <div>
         <a href="#" class="btn btn-branding">Contact me</a>
         <a href="about.html"  title="about-me" class="px-2">About me</a>
-        <a href="work.html"  title="about-me">works</a>
+        <a href="work.html"  title="about-me" class="px-2">works</a>
+        <a href="contact.html"  title="about-me">contacts</a>
+
 
       </div>
     </div>
