--- a/index.html
+++ b/index.html
@@ -14,16 +14,31 @@
     <script src="https://kit.fontawesome.com/7c68763aac.js" crossorigin="anonymous"></script>
 </head>
 <body>
+    <div class="container">
+    <nav class="d-flex justify-content-between">
+    <img src="images/logo.png" class="logo" alt=""/>
+    <ul>
+      <li class="active">
+        <a href="/">Home</a> 
+      </li>
+      <li>
+        <a href="/about.html">About</a>
+      </li>
+      <li>
+        <a href="/work.html">Work</a>
+      </li>
+      <li>
+        <a href="/contact.html">Contact</a>
+      </li>
+    </ul>
+  </nav>
+    </div>
     <div class="hero">
       <p>👋 Hello, I am</p>
       <h1>Odubiro Omodara</h1>
       <h2 class="mb-3">Frontend Developer, based in Nigeria.</h2>
       <div>
         <a href="#" class="btn btn-branding">Contact me</a>
-        <a href="about.html"  title="about-me" class="px-2">About me</a>
-        <a href="work.html"  title="about-me" class="px-2">works</a>
-        <a href="contact.html"  title="about-me">contacts</a>
-
 
       </div>
     </div>
