--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <h1>Odubiro Omodara</h1>
       <h2 class="mb-3">Frontend Developer, based in Nigeria.</h2>
       <div>
-        <a href="/contact.html" class="btn btn-branding">Contact me</a>
+        <a href="mailto:omodaraodubiro@gmail.com" class="btn btn-branding">Contact me</a>
 
       </div>
     </div>
