--- a/index.html
+++ b/index.html
@@ -1,58 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Front-end developer portfolio - omodara odubiro</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@500;700&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/style/portfolio.css">
-    <script src="https://kit.fontawesome.com/7c68763aac.js" crossorigin="anonymous"></script>
-</head>
-<body>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="/style/portfolio.css" />
+    <script
+      src="https://kit.fontawesome.com/7c68763aac.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
     <div class="container">
-    <nav class="d-flex justify-content-between">
-    <img src="images/logo.png" class="logo" alt=""/>
-    <ul>
-      <li class="active">
-        <a href="/">Home</a> 
-      </li>
-      <li>
-        <a href="/about.html">About</a>
-      </li>
-      <li>
-        <a href="/work.html">Work</a>
-      </li>
-      <li>
-        <a href="/contact.html">Contact</a>
-      </li>
-    </ul>
-  </nav>
+      <nav class="d-flex justify-content-between">
+        <img src="images/logo.png" class="logo" alt="" />
+        <ul>
+          <li class="active">
+            <a href="/">Home</a>
+          </li>
+          <li>
+            <a href="/about.html">About</a>
+          </li>
+          <li>
+            <a href="/work.html">Work</a>
+          </li>
+          <li>
+            <a href="/contact.html">Contact</a>
+          </li>
+        </ul>
+      </nav>
     </div>
     <div class="hero">
       <p>👋 Hello, I am</p>
       <h1>Odubiro Omodara</h1>
       <h2 class="mb-3">Frontend Developer, based in Nigeria.</h2>
       <div>
-        <a href="mailto:omodaraodubiro@gmail.com" class="btn btn-branding">Contact me</a>
-
+        <a href="mailto:omodaraodubiro@gmail.com" class="btn btn-branding"
+          >Contact me</a
+        >
       </div>
     </div>
-     <p class="text-center m-5">Featured Project which my best projects be choice to show</p>
+    <p class="text-center m-5">
+      Featured Project which my best projects be choice to show
+    </p>
     <div class="container">
       <div class="row mb-5">
         <div class="col d-none d-lg-block">
-          <img src="images/weatherapp.png" class="img-fluid" alt=""/>
+          <img src="images/weatherapp.png" class="img-fluid" alt="" />
         </div>
         <div class="col">
           <div class="project-description">
-          <h2 class="mb-5">Weather App</h2>
-          <p class="mb-5 text-muted">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by</p>
-          <a href="#" class="btn btn-branding-outline">Learn more</a>
+            <h2 class="mb-5">Weather App</h2>
+            <p class="mb-5 text-muted">
+              Far far away, behind the word mountains, far from the countries
+              Vokalia and Consonantia, there live the blind texts. Separated
+              they live in Bookmarksgrove right at the coast of the Semantics, a
+              large language ocean. A small river named Duden flows by
+            </p>
+            <a href="#" class="btn btn-branding-outline">Learn more</a>
           </div>
         </div>
       </div>
@@ -60,29 +83,56 @@
       <div class="row mb-5">
         <div class="col">
           <div class="project-description">
-          <h2 class="mb-5">Cabu App</h2>
-          <p class="mb-5 text-muted">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by</p>
-          <a href="#" class="btn btn-branding-outline">Learn more</a>
+            <h2 class="mb-5">Cabu App</h2>
+            <p class="mb-5 text-muted">
+              Far far away, behind the word mountains, far from the countries
+              Vokalia and Consonantia, there live the blind texts. Separated
+              they live in Bookmarksgrove right at the coast of the Semantics, a
+              large language ocean. A small river named Duden flows by
+            </p>
+            <a href="#" class="btn btn-branding-outline">Learn more</a>
           </div>
         </div>
-         <div class="col d-none d-lg-block">
-          <img src="images/carpoll.png" class="img-fluid" alt=""/>
+        <div class="col d-none d-lg-block">
+          <img src="images/carpoll.png" class="img-fluid" alt="" />
         </div>
       </div>
 
       <div class="row">
         <div class="col d-none d-lg-block">
-          <img src="images/msf.png" class="img-fluid" alt=""/>
+          <img src="images/msf.png" class="img-fluid" alt="" />
         </div>
         <div class="col">
           <div class="project-description">
-          <h2 class="mb-5">Msf Project</h2>
-          <p class="mb-5 text-muted">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by</p>
-          <a href="#" class="btn btn-branding-outline">Learn more</a>
+            <h2 class="mb-5">Msf Project</h2>
+            <p class="mb-5 text-muted">
+              Far far away, behind the word mountains, far from the countries
+              Vokalia and Consonantia, there live the blind texts. Separated
+              they live in Bookmarksgrove right at the coast of the Semantics, a
+              large language ocean. A small river named Duden flows by
+            </p>
+            <a href="#" class="btn btn-branding-outline">Learn more</a>
           </div>
         </div>
       </div>
+      <footer>
+        <div class="d-flex justify-content-center mb-5">
+          <a href="mailto:omodaraodubiro@gmail.com" class="email-link"
+            >omodaraodubiro@gmail.com</a
+          >
+        </div>
+        <div class="social-links d-flex justify-content-center m-5">
+          <a href="">
+            <i class="fa-brands fa-instagram"></i>
+          </a>
+          <a href="">
+            <i class="fa-brands fa-github"></i>
+          </a>
+          <a href="">
+            <i class="fa-brands fa-linkedin"></i>
+          </a>
+        </div>
+      </footer>
     </div>
-    
   </body>
 </html>
