--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <h2 class="mb-3">Frontend Developer, based in Nigeria.</h2>
       <div>
         <a href="mailto:omodaraodubiro@gmail.com" class="btn btn-branding"
-          >Contact me</a
+          >contact me</a
         >
       </div>
     </div>
@@ -116,19 +116,28 @@
         </div>
       </div>
       <footer>
+        <div class="contact-box d-flex justify-content-between mb-5 d-none d-md-flex">
+          <div>
+          <h4>Work Inquiry</h4>
+          <p class="text-muted">let's work together</p>
+          </div>
+          <div>
+          <a href="" class="btn btn-branding mt-3">contact me</a>
+        </div>
+        </div>
         <div class="d-flex justify-content-center mb-5">
           <a href="mailto:omodaraodubiro@gmail.com" class="email-link"
             >omodaraodubiro@gmail.com</a
           >
         </div>
-        <div class="social-links d-flex justify-content-center m-5">
-          <a href="">
-            <i class="fa-brands fa-instagram"></i>
+        <div class="social-links d-flex justify-content-center">
+          <a href="https://twitter.com/omoxdara" target="_blank">
+            <i class="fa-brands fa-twitter"></i>
           </a>
-          <a href="">
+          <a href="https://github.com/omodaraodubiro" target="_blank">
             <i class="fa-brands fa-github"></i>
           </a>
-          <a href="">
+          <a href="https://www.linkedin.com/in/odubiro-omodara-5077ba144/" target="_blank">
             <i class="fa-brands fa-linkedin"></i>
           </a>
         </div>
