--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
                     <h1 class="mb-4">Hi I am Omodara Odubiro</h1>
                     <h2 class="mb-4">Frontend Developer, based in Nigeria.</h2>
                     <p class="mb-5">For anyone who wants to start learning code, this workshop is very interesting. You will be challenged with different exercises, and everything is well explained, homework and deadlines are good for keep focus</p>
-                    <a href="#" class="btn btn-branding">See my projects</a>
+                    <a href="/work.html" class="btn btn-branding">See my projects</a>
                 </div>
             </div>
             <div class="col-lg-6">
