--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
                 <div class="content">
                     <h1 class="mb-4">Hi I am Omodara Odubiro</h1>
                     <h2 class="mb-4">Frontend Developer, based in Nigeria.</h2>
-                    <p class="mb-5">For anyone who wants to start learning code, this workshop is very interesting. You will be challenged with different exercises, and everything is well explained, homework and deadlines are good for keep focus</p>
+                    <p class="mb-5">I am a visual designer specialising in UI/UX and frontend development with experience in delivering end-to-end designs for software products and businesses. I look forward to sharing my work with you!</p>
                     <a href="/work.html" class="btn btn-branding">See my projects</a>
                 </div>
             </div>
