--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
           <p class="text-muted">let's work together</p>
           </div>
           <div>
-          <a href="" class="btn btn-branding mt-3">contact me</a>
+          <a href="mailto:omodaraodubiro@gmail.com" class="btn btn-branding mt-3">contact me</a>
         </div>
         </div>
         <div class="d-flex justify-content-center mb-5">
