made the website SEO friendly and fixed the navigation and links

--- a/about.html
+++ b/about.html
@@ -14,6 +14,27 @@
     <script src="https://kit.fontawesome.com/7c68763aac.js" crossorigin="anonymous"></script>
 </head>
 <body>
+    <div class="container">
+        <nav class="d-flex justify-content-between">
+          <a href="/" title="Homepage">
+          <img src="images/logo.png" class="logo" alt="omodara logo" />
+          </a>
+          <ul>
+            <li>
+              <a href="/" title="Homepage">Home</a>
+            </li>
+            <li class="active">
+              <a href="/about.html" title="About omodara">About</a>
+            </li>
+            <li>
+              <a href="/work.html" title="omodara's work">Work</a>
+            </li>
+            <li>
+              <a href="/contact.html" title="contact omodara">Contact</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
     <div class="content-container container">
         <div class="row">
             <div class="col-lg-6">
@@ -28,6 +49,37 @@
                 <img src="images/mypics.png" alt="" class="img-fluid mypics">
             </div>
         </div>
+        <footer>
+            <div class="contact-box d-flex justify-content-between mb-5 d-none d-md-flex">
+              <div>
+              <h3>Work Inquiry</h3>
+              <p class="text-muted">let's work together</p>
+              </div>
+              <div>
+              <a href="/contact.html" class="btn btn-branding mt-3" title="contact omodara">contact me</a>
+            </div>
+            </div>
+            <div class="d-flex justify-content-center mb-5">
+              <a href="mailto:omodaraodubiro@gmail.com" class="email-link" title="Email omodara"
+                >omodaraodubiro@gmail.com</a
+              >
+            </div>
+            <div class="social-links d-flex justify-content-center">
+              <a href="https://twitter.com/omoxdara" target="_blank" title="Twitter profile">
+                <i class="fa-brands fa-twitter"></i>
+              </a>
+              <a href="https://github.com/omodaraodubiro" target="_blank" title="Github profile">
+                <i class="fa-brands fa-github"></i>
+              </a>
+              <a href="https://www.linkedin.com/in/odubiro-omodara-5077ba144/" target="_blank" title="linkedin profile">
+                <i class="fa-brands fa-linkedin"></i>
+              </a>
+            </div>
+            <p class="text-center mt-5">
+              ✌This project was coded by omodara,and it is 
+              <a href="https://github.com/omodaraodubiro/portfolio-project" target="_blank">open-sourced</a>
+            </p>
+          </footer>
     </div>
     
 </body>
