--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="omodara is a frontend engineer based in Nigeria.">
     <title>Front-end developer portfolio - omodara odubiro</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -31,19 +32,21 @@
   <body>
     <div class="container">
       <nav class="d-flex justify-content-between">
-        <img src="images/logo.png" class="logo" alt="" />
+        <a href="/" title="Homepage">
+        <img src="images/logo.png" class="logo" alt="omodara logo" />
+        </a>
         <ul>
           <li class="active">
-            <a href="/">Home</a>
+            <a href="/" title="Homepage">Home</a>
           </li>
           <li>
-            <a href="/about.html">About</a>
+            <a href="/about.html" title="About omodara">About</a>
           </li>
           <li>
-            <a href="/work.html">Work</a>
+            <a href="/work.html" title="omodara's work">Work</a>
           </li>
           <li>
-            <a href="/contact.html">Contact</a>
+            <a href="/contact.html" title="contact omodara">Contact</a>
           </li>
         </ul>
       </nav>
@@ -53,7 +56,7 @@
       <h1>Odubiro Omodara</h1>
       <h2 class="mb-3">Frontend Developer, based in Nigeria.</h2>
       <div>
-        <a href="mailto:omodaraodubiro@gmail.com" class="btn btn-branding"
+        <a href="/contact.html" class="btn btn-branding" title="contact me"
           >contact me</a
         >
       </div>
@@ -64,7 +67,7 @@
     <div class="container">
       <div class="row mb-5">
         <div class="col d-none d-lg-block">
-          <img src="images/weatherapp.png" class="img-fluid" alt="" />
+          <img src="images/weatherapp.png" class="img-fluid" alt="Weather App preview" />
         </div>
         <div class="col">
           <div class="project-description">
@@ -75,7 +78,7 @@
               they live in Bookmarksgrove right at the coast of the Semantics, a
               large language ocean. A small river named Duden flows by
             </p>
-            <a href="#" class="btn btn-branding-outline">Learn more</a>
+            <a href="/work.html" class="btn btn-branding-outline">Learn more</a>
           </div>
         </div>
       </div>
@@ -90,17 +93,17 @@
               they live in Bookmarksgrove right at the coast of the Semantics, a
               large language ocean. A small river named Duden flows by
             </p>
-            <a href="#" class="btn btn-branding-outline">Learn more</a>
+            <a href="/work.html" class="btn btn-branding-outline">Learn more</a>
           </div>
         </div>
         <div class="col d-none d-lg-block">
-          <img src="images/carpoll.png" class="img-fluid" alt="" />
+          <img src="images/carpoll.png" class="img-fluid" alt="Cabu App preview" />
         </div>
       </div>
 
       <div class="row">
         <div class="col d-none d-lg-block">
-          <img src="images/msf.png" class="img-fluid" alt="" />
+          <img src="images/msf.png" class="img-fluid" alt="Msf Project preview" />
         </div>
         <div class="col">
           <div class="project-description">
@@ -111,36 +114,40 @@
               they live in Bookmarksgrove right at the coast of the Semantics, a
               large language ocean. A small river named Duden flows by
             </p>
-            <a href="#" class="btn btn-branding-outline">Learn more</a>
+            <a href="/work.html" class="btn btn-branding-outline">Learn more</a>
           </div>
         </div>
       </div>
       <footer>
         <div class="contact-box d-flex justify-content-between mb-5 d-none d-md-flex">
           <div>
-          <h4>Work Inquiry</h4>
+          <h3>Work Inquiry</h3>
           <p class="text-muted">let's work together</p>
           </div>
           <div>
-          <a href="mailto:omodaraodubiro@gmail.com" class="btn btn-branding mt-3">contact me</a>
+          <a href="/contact.html" class="btn btn-branding mt-3" title="contact omodara">contact me</a>
         </div>
         </div>
         <div class="d-flex justify-content-center mb-5">
-          <a href="mailto:omodaraodubiro@gmail.com" class="email-link"
+          <a href="mailto:omodaraodubiro@gmail.com" class="email-link" title="Email omodara"
             >omodaraodubiro@gmail.com</a
           >
         </div>
         <div class="social-links d-flex justify-content-center">
-          <a href="https://twitter.com/omoxdara" target="_blank">
+          <a href="https://twitter.com/omoxdara" target="_blank" title="Twitter profile">
             <i class="fa-brands fa-twitter"></i>
           </a>
-          <a href="https://github.com/omodaraodubiro" target="_blank">
+          <a href="https://github.com/omodaraodubiro" target="_blank" title="Github profile">
             <i class="fa-brands fa-github"></i>
           </a>
-          <a href="https://www.linkedin.com/in/odubiro-omodara-5077ba144/" target="_blank">
+          <a href="https://www.linkedin.com/in/odubiro-omodara-5077ba144/" target="_blank" title="linkedin profile">
             <i class="fa-brands fa-linkedin"></i>
           </a>
         </div>
+        <p class="text-center mt-5">
+          ✌This project was coded by omodara,and it is 
+          <a href="https://github.com/omodaraodubiro/portfolio-project" target="_blank">open-sourced</a>
+        </p>
       </footer>
     </div>
   </body>
