--- a/work.html
+++ b/work.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Front-end developer portfolio - omodara odubiro</title>
+    <meta name="description" content="works done by omodara,omodara is a frontend engineer based in Nigeria.">
+    <title>works done by omodara - omodara odubiro</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@500;700&display=swap" rel="stylesheet">
@@ -14,33 +15,85 @@
     <script src="https://kit.fontawesome.com/7c68763aac.js" crossorigin="anonymous"></script>
 </head>
 <body>
+    <div class="container">
+        <nav class="d-flex justify-content-between">
+          <a href="/" title="Homepage">
+          <img src="images/logo.png" class="logo" alt="omodara logo" />
+          </a>
+          <ul>
+            <li>
+              <a href="/" title="Homepage">Home</a>
+            </li>
+            <li>
+              <a href="/about.html" title="About omodara">About</a>
+            </li>
+            <li class="active">
+              <a href="/work.html" title="omodara's work">Work</a>
+            </li>
+            <li>
+              <a href="/contact.html" title="contact omodara">Contact</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
     <div class="content-container container">
                 <div class="content">
                     <h1 class="mb-5">Take a look at what i've been working on!</h1>
 
                     <div class="row">
                         <div class="col-md-6 mb-4">
-                            <img src="images/carpoll.png" alt="" class="img-fluid mb-3 rounded"/>
+                            <img src="images/carpoll.png" alt="carpoll app preview" class="img-fluid mb-3 rounded"/>
                             <h3 class="text-center m-0">carpoll app</h3>
                             <p class="text-center text-muted">Built with HTML and CSS</p>
                         </div>
                         <div class="col-md-6 mb-4">
-                            <img src="images/weatherapp.png" alt="" class="img-fluid mb-3 rounded"/>
+                            <img src="images/weatherapp.png" alt="weather app preview" class="img-fluid mb-3 rounded"/>
                             <h3 class="text-center m-0">weather app</h3>
                             <p class="text-center text-muted">Built with HTML and javascript</p>
                         </div>
                         <div class="col-md-6 mb-4">
-                            <img src="images/msf.png" alt="" class="img-fluid mb-3 rounded"/>
+                            <img src="images/msf.png" alt="MSF app preview" class="img-fluid mb-3 rounded"/>
                             <h3 class="text-center m-0">MSF app</h3>
                             <p class="text-center text-muted">Built with HTML and React</p>
                         </div>
                         <div class="col-md-6 mb-4">
-                            <img src="images/dictionary.png" alt="" class="img-fluid mb-3 rounded"/>
+                            <img src="images/dictionary.png" alt="dictionary app preview" class="img-fluid mb-3 rounded"/>
                             <h3 class="text-center m-0">dictionary app</h3>
                             <p class="text-center text-muted">Built with HTML and CSS</p>
                         </div>
                     </div>
                 </div> 
+                <footer>
+                    <div class="contact-box d-flex justify-content-between mb-5 d-none d-md-flex">
+                      <div>
+                      <h3>Work Inquiry</h3>
+                      <p class="text-muted">let's work together</p>
+                      </div>
+                      <div>
+                      <a href="/contact.html" class="btn btn-branding mt-3" title="contact omodara">contact me</a>
+                    </div>
+                    </div>
+                    <div class="d-flex justify-content-center mb-5">
+                      <a href="mailto:omodaraodubiro@gmail.com" class="email-link" title="Email omodara"
+                        >omodaraodubiro@gmail.com</a
+                      >
+                    </div>
+                    <div class="social-links d-flex justify-content-center">
+                      <a href="https://twitter.com/omoxdara" target="_blank" title="Twitter profile">
+                        <i class="fa-brands fa-twitter"></i>
+                      </a>
+                      <a href="https://github.com/omodaraodubiro" target="_blank" title="Github profile">
+                        <i class="fa-brands fa-github"></i>
+                      </a>
+                      <a href="https://www.linkedin.com/in/odubiro-omodara-5077ba144/" target="_blank" title="linkedin profile">
+                        <i class="fa-brands fa-linkedin"></i>
+                      </a>
+                    </div>
+                    <p class="text-center mt-5">
+                      ✌This project was coded by omodara,and it is 
+                      <a href="https://github.com/omodaraodubiro/portfolio-project" target="_blank">open-sourced</a>
+                    </p>
+                  </footer>
     </div>
     
 </body>
